# duck-db-data

./: .gitignore  README.md  main.py  pyproject.toml  test.sh  wrangler.rest
