[tool.poetry]
name = "duck-db-data"
version = "0.1.0"
description = ""
authors = ["Jeff Espenschied <jeffrey.espenschied@datarobot.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
